--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./script.js"></script>
-</body>
+    <meta name="viewport" content="width=device-width, initial->">
+    <title>Sumeya's Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="./styles.css">
+  </head>
+
+  <body>
+
+    <section class="scores">
+        <div class="wins-score">
+          <h1>Wins: </h1>
+          <span id="wins-score"></span>
+        </div>
+        <div class="losses-score">
+          <h1>Losses: </h1>
+          <span id="losses"></span>
+        </div>
+        <div class="draws-score">
+          <h1>Draws: </h1>
+          <span id="draws"></span>
+        </div>
+    </section>
+
+    <section class="options-container">
+      <h2>Choose an option:</h2>
+      <div class="btn-container">
+        <button id="rock-btn" class="btn">Rock</button>
+        <button id="paper-btn" class="btn">Paper</button>
+        <button id="scissors-btn" class="btn">Scissors</button>
+      </div>
+    </section>
+      
+    <section class="results-container">
+        <p id="message"></p>
+    </section>
+
+  </body>
+  <script src="./script.js"></script>
 </html>
